<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_footer"
    tools:context="com.example.biro.ptf.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <android.support.v7.widget.CardView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="#1AFFFFFF"
        card_view:cardElevation="4dp"
        tools:targetApi="lollipop"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           >

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textColor="#515151"
                android:maxLines="4"
                android:id="@+id/welcomeMessage"
                android:text="@string/welcome_to_ptf_app_sign_in_now"
                android:layout_below="@id/cardView"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/name"

                android:id="@+id/name"
                android:layout_below="@id/welcomeMessage"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/mobile"


                android:id="@+id/mobile"
                android:layout_below="@id/name"/>



            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:layout_below="@id/mobile"
                android:layout_marginBottom="16dp"

                />


        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>
